<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_detail" />
        <item
            android:id="@+id/nav_application"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/menu_form" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_logout" />
    </group>

</menu>
