<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.summary.SummaryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_details"
        android:name="com.example.myapplication.ui.detail.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail" />

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/nav_form"
        android:name="com.example.myapplication.ui.form.FormFragment"
        android:label="@string/menu_form"
        tools:layout="@layout/fragment_form" />

<!--    <fragment-->
<!--        android:id="@+id/nav_share"-->
<!--        android:name="com.example.myapplication.ui.share.ShareFragment"-->
<!--        android:label="@string/menu_share"-->
<!--        tools:layout="@layout/fragment_share" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="com.example.myapplication.ui.send.SendFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_send" />-->
</navigation>